[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pubmed-screen"
version = "1.0.0"
authors = [
    { name = "Rami Hamati", email = "rhamati95@gmail.com" }
]
description = "Automates the initial screening phase of systematic PubMed search using keywords."
readme = "README.md"
license = {file = "LICENSE"}

keywords = ["PubMed", "citations"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.8"

dependencies = [
    "pandas >= 1.5.0, < 2",
    "requests >= 2.28.0, < 3",
    "seaborn >= 0.12.0, < 1",
]

[project.optional-dependencies]
dev = ["black"]

[project.scripts]
pmscreen = "pmscreen.main:main"
