[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubmed-screen"
version = "0.1.0"
authors = [
    { name = "Rami Hamati", email = "rhamati95@gmail.com" }
]
description = "Automates the initial screening phase of systematic PubMed search using keywords."
readme = "README.md"
license = {file = "LICENSE"}

keywords = ["PubMed", "citations"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

requires-python = ">=3.8"

dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "black",
]

[project.scripts]
pmscreen = "pubmed_screen.main:main"
